--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ecomapp",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "jquery-ujs": "^1.2.2"
+  },
   "devDependencies": {
     "webpack": "^4.29.0",
     "webpack-dev-server": "^3.1.14"
